database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy-db
  labels:
    app: mysql-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-app
  template:
    metadata:
      labels:
        app: mysql-app
    spec:
      containers:
        - name: mysql-container
          image: mysql
          ports:
            - containerPort: 3306
